--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kevin-david/zipalign-sign-android-release.git"
+    "url": "git+https://github.com/Laerdal/zipalign-sign-android-release.git"
   },
   "lint-staged": {
     "**/*": "eslint --cache --fix"
@@ -22,7 +22,7 @@
     "node",
     "setup"
   ],
-  "author": "kevin-david",
+  "author": "Laerdal",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.1",
@@ -35,7 +35,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.0.0",
-    "@vercel/ncc": "^0.38.1",
+    "@vercel/ncc": "^0.38.3",
     "eslint": "^9.8.0",
     "husky": "^9.1.4",
     "jest": "^29.7.0",
